test/ui/test/metadata/duplicate-entries.metadata
first: 23, first: "",

inner: {
    it: [],
    it: 0'000,
}
